@@ -6,6 +6,7 @@ Changes for 1.9
 
 Changes for 1.8.3
 
+ - [ZBX-2433] fixed time not updated on slides when now is selected (Vedmak)
  - [ZBX-2452] fixed parsing of integer values from SNMP's Hex-STRING (asaveljevs)
  - [ZBX-2313] forbid to add graph from templates to screen (Vedmak)
  - [ZBX-1503] added information message after host delete action, about host being deleted (Maxim Andruhovich / AM)
